<resources>
    <string name="app_name">NodeGrid</string>

    <string name="main_title">NodeGrid SDK Sample</string>
    <string name="action_settings">Settings</string>
    <string name="system_calls_text">System API Calls</string>
    <string name="oauth_calls_text">Oauth API Calls</string>
    <string name="app_calls_text">App API Calls</string>
    <string name="status_check_text">Check NodeGrid Status</string>
    <string name="create_new_user_title">Create New User</string>
    <string name="generate_token_title">Generate Token</string>
    <string name="get_all_objects_title">Get All Objects</string>
    <string name="get_object_from_id_title">Get Object From ID</string>
    <string name="press_key_to_continue_title">Press here to Continue . . .</string>
    <string name="request_title">Request</string>
    <string name="response_title">Response</string>
    <string name="close_title">Close</string>
    <string name="configuration_label">Configurations</string>
    <string name="nodegrid_server_url_title">NodeGrid Server URL:</string>
    <string name="description_title">Simple and Light-weight mBaaS from NodeJS</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
</resources>
