<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/main_title"
        android:gravity="center"
        android:textSize="25dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/system_calls_text"
        android:textSize="22dp"
        android:id="@+id/systemTitleTextView"
        android:layout_below="@+id/titleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_check_text"
        android:id="@+id/systemCheckBtn"
        android:layout_below="@+id/systemTitleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_user_title"
        android:id="@+id/systemUserCreateBtn"
        android:layout_below="@+id/systemCheckBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/systemCheckBtn"
        android:layout_alignEnd="@+id/systemCheckBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get User"
        android:id="@+id/systemUserGetBtn"
        android:layout_below="@+id/systemUserCreateBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/systemUserCreateBtn"
        android:layout_alignEnd="@+id/systemUserCreateBtn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete User"
        android:id="@+id/systemUserDeleteBtn"
        android:layout_below="@+id/systemUserGetBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/systemUserGetBtn"
        android:layout_alignEnd="@+id/systemUserGetBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/system_calls_text"
        android:textSize="22dp"
        android:id="@+id/oauthTitleTextView"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/systemUserDeleteBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_token_title"
        android:id="@+id/generateTokenBtn"
        android:layout_below="@+id/oauthTitleTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/systemUserDeleteBtn"
        android:layout_alignEnd="@+id/systemUserDeleteBtn" />

</RelativeLayout>
