<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/requestTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/request_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:id="@+id/requestLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/requestTitleTextView"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="Method: "
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/requestMethodTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/responseTitleTextView"
                    android:layout_toRightOf="@+id/responseTitleTextView"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="URL: "
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/requestEndPointTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/requestLinearLayout" />

        <TextView
            android:id="@+id/responseTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/space"
            android:text="@string/response_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:id="@+id/responseLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/requestLinearLayout"
            android:layout_alignStart="@+id/requestLinearLayout"
            android:layout_below="@+id/responseTitleTextView"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="Status: "
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/responseStatusTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:text="Msg: "
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/responseMsgTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/viewCloseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_title"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>